[REFACTOR] improving code reliability